# demando

./: .dockerignore  .flake8  .gitignore  Dockerfile  Procfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  settings.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/versions/: 5306c33f19be_add_questions.py  74d2988e5e61_add_field_answered_to_question.py  7523aa726167_change_id_pk.py  dfd7ece2ad9c_add_field_answered_to_question.py
migrations/: env.py
migrations/versions/: 146fd61f208e_added_timestamped_not_abstract_base_.py  193b266cbdd5_added_timestamped_base_model.py  20e810dbaaf0_upgrade_to_gino.py  22c79bd8ec9d_fix_options_model.py  2cc164ac4daa_added_timestamped_not_abstract_base_.py  40ed970c0508_added_timestamped_not_abstract_base_.py  5563f5229e09_added_boolean_field_at_user_model.py  68f956ccc590_update_db.py  91d37c046c5f_added_boolean_field_email_verified.py  c9bf2affbcf4_droped_db.py  dcee17a6aa3c_verification_code_field_to_user.py  deddaa1a7b89_added_timestamped_not_abstract_base_.py  fd52946d1029_added_boolean_field_at_user_model_v2.py
src/: app.py  commands.py  logger.py  main.py
src/auth/: backend.py  crud.py  exceptions.py  manager.py  models.py  router.py  routes.py  schemas.py  validators.py
src/base/: database.py  exceptions.py  manager.py  models.py  router.py  schemas.py  settings.py  tasks.py  utils.py
src/base/integrations/: __init__.py  mailjet.py
src/core/: database.py  manager.py  router.py  schemas.py  settings.py  utils.py
src/demando/: commands.py  main.py
src/questions/: crud.py  manager.py  models.py  router.py  routes.py  schemas.py
src/quiz/: manager.py  models.py  types.py  webocket.py
src/scripts/: celery.py  dev.py  prod.py  truncate_db.py  truncate_test_db.py
src/tasks/: __init__.py  celeryconfig.py  mails.py
src/tests/: conftest.py  test_client.py  test_database.py  test_server.py  tests_websocket.py
tests/: conftest.py  test_client.py  test_database.py
(+94 files in other folders)
